deploy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: range-merger
  labels:
    app.kubernetes.io/name: range-merger
    app.kubernetes.io/instance: example-deployment
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: range-merger
    app.kubernetes.io/instance: example-deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: range-merger
  labels:
    app.kubernetes.io/name: range-merger
    app.kubernetes.io/instance: example-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: range-merger
      app.kubernetes.io/instance: example-deployment
  template:
    metadata:
      labels:
        app.kubernetes.io/name: range-merger
        app.kubernetes.io/instance: example-deployment
    spec:
      containers:
        - name: range-merger
          image: "range-merger:0.0.1"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
            capabilities:
              drop: [all]
              add: [NET_BIND_SERVICE]
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 8090
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: range-merger
  labels:
    app.kubernetes.io/name: range-merger
    app.kubernetes.io/instance: example-deployment
spec:
  rules:
    - host: "range-merger.127.0.0.1.nip.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: range-merger
                port:
                  name: http
